[#139657691] Adapted Csharp example to new swagger definitions.